manifests/si-notepad/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: si-notepad
  labels:
    app: si-notepad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: si-notepad
  template:
    metadata:
      labels:
        app: si-notepad
    spec:
      containers:
      - name: si-notepad
        image: ksw2137/si-notepad:3a43609ffa847e429bada6f652e02879640cbe8a
        ports:
        - containerPort: 8888
        volumeMounts:
        - name: si-notepad-storage
          mountPath: /home/jupyter
      volumes:
      - name: si-notepad-storage
        persistentVolumeClaim:
          claimName: si-notepad
