manifests/si-notepad/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: si-notepad
spec:
  selector:
    app: si-notepad
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
  type: ClusterIP
