manifests/si-notepad/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: si-basic-auth
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
  name: si-notepad
spec:
  tls:
  - hosts:
    - si.boredotter.dev
    secretName: si-tls
  rules:
  - host: si.boredotter.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: si-notepad
            port:
              number: 80
